Ajout de la page contact

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samuel Ressiot-Portfolio</title>
-    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Space+Grotesk&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Sitara&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <header>
@@ -43,7 +42,7 @@
             <div class=e2_32>
                 <div class=e1_22>
                     <div class=e1_21>
-                        <div class="e1_6"></div><span class="e1_19">Download CV</span>
+                        <div class="link_CV e1_6"></div><span class="link_CV e1_19">Download CV</span>
                     </div>
                 </div><span class="e1_18">Formation of DevOps and Backend</span>
             </div>
@@ -58,7 +57,7 @@
         </div>
         <div class=e5_7>
             <div class=e5_8>
-                <div class="e5_9"></div><span class="e5_10">Contact</span>
+                <div class="e5_9"></div><a href='contacts.html' class="e5_10">Contact</a>
             </div>
         </div>
         <div class=e2_42>
