Change class name of html balise

--- a/contacts.html
+++ b/contacts.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class=e6_66>
-            <div class="e6_67"></div><span class="e6_68">About Me</span>
+            <div class="e6_67"></div><a href='index.html' class="e6_68">About Me</a>
         </div>
         <div class=e6_69>
             <div class=e6_70>
