--- a/index.html
+++ b/index.html
@@ -11,79 +11,75 @@
 
 </head>
 <header>
-
+    <div class=e5_2>
+        <div class="e2_26"></div> <a class="e2_29">About Me</a>
+    </div>
+    <div class=e5_6>
+        <div class=e5_3>
+            <div class="e5_4"></div> <a class="e5_5">Projects</a>
+        </div>
+    </div>
+    <div class=e5_7>
+        <div class=e5_8>
+            <div class="e5_9"> </div><a href='contacts.html' class="e5_10">Contact</a>
+        </div>
+    </div>
 </header>
 
 <body>
-    <div class=>
-        <div class=e1_15>
-            <div class="e1_12"></div>
-            <div class="e1_4"></div>
-        </div>
-        <div class=e1_13>
-            <div class="e1_3"></div>
-            <div class="e1_11"></div>
-        </div>
-        <div class=e2_37>
-            <div class=e2_33>
-                <div class="e2_34"></div>
-            </div>
-            <div class="e2_36"></div>
-        </div>
-        <div class=e1_14>
-            <div class="e1_7"></div>
-            <div class="e1_9"></div>
-        </div>
-        <div class=e2_55>
-            <div class=e1_24>
-                <div class="e1_23"></div>
-                <div class=e1_20><span class="e1_16">Hello, I am </span><span class="e1_17">Samuel RESSIOT</span></div>
-            </div>
-            <div class=e2_32>
-                <div class=e1_22>
-                    <div class=e1_21>
-                        <div class="link_CV e1_6"></div><span class="link_CV e1_19">Download CV</span>
-                    </div>
-                </div><span class="e1_18">Formation of DevOps and Backend</span>
-            </div>
-        </div>
-        <div class=e5_2>
-            <div class="e2_26"></div><span class="e2_29">About Me</span>
-        </div>
-        <div class=e5_6>
-            <div class=e5_3>
-                <div class="e5_4"></div><span class="e5_5">Projects</span>
-            </div>
-        </div>
-        <div class=e5_7>
-            <div class=e5_8>
-                <div class="e5_9"></div><a href='contacts.html' class="e5_10">Contact</a>
-            </div>
-        </div>
-        <div class=e2_42>
-            <div class=e2_39>
-                <div class="e2_40"></div>
-            </div>
-            <div class="e2_38"></div>
-        </div>
-        <div class=e2_48>
-            <div class=e2_44>
-                <div class=e2_45>
-                    <div class="e2_46"></div>
+    <div class="python_round">
+        <div class="python_circle"></div>
+        <div class="python_logo"></div>
+    </div>
+
+    <div class="css_round">
+        <div class="css_circle"></div>
+        <div class="css_logo"></div>
+    </div>
+
+    <div class="php_round">
+        <div class=php_circle></div>
+        <div class="php_logo"></div>
+    </div>
+
+    <div class="html_round">
+        <div class="html_circle"></div>
+        <div class="html_logo"></div>
+    </div>
+
+    <div class="sql_round">
+        <div class="sql_circle"></div>
+        <div class="sql_logo"></div>
+    </div>
+
+    <div class="linux_round">
+        <div class="linux_circle"></div>
+        <div class="linux_logo"></div>
+    </div>
+
+    <div class="git_round">
+        <div class="git_circle"></div>
+        <div class="git_logo"></div>
+    </div>
+
+    <div class="center_round">
+        <div class="center_circle"></div>
+        <div class="text">
+            <span class="line1">Hello, I am </span>
+            <span class="line2">Samuel RESSIOT</span></div>
+        <div class=e2_32>
+            <div class=e1_22>
+                <div class=e1_21>
+                    <div class="link_CV e1_6"></div><a href="assets/pdf/CV Ressiot Samuel companies.pdf" download
+                        class="link_CV e1_19">Download CV</a>
                 </div>
-            </div>
-            <div class="e2_43"></div>
+            </div><span class="e1_18">Formation of DevOps and Backend</span>
         </div>
-        <div class=e5_39>
-            <div class=e5_33>
-                <div class=e5_34>
-                    <div class=e5_35>
-                        <div class="e5_36"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="e5_38"></div>
-        </div>
+    </div>
+
+
+
+
     </div>
 </body>
 
