AJout des liens et commencement de la responsasivité

--- a/contacts.html
+++ b/contacts.html
@@ -7,40 +7,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
     <link href="https://fonts.googleapis.com/css?family=Space+Grotesk&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
-    <div class=e6_40>
-        <div class=e6_54>
-            <div class=e6_55>
-                <div class="e6_56"></div><span class="e6_59">Contacts</span>
+    <div class=portfolio___contact__desktop_>
+        <div class=all_contacts>
+            <div class="all_contacts_circle"></div><a class="all_contacts_text">Contacts</a>
+        </div>
+
+        <a href="https://www.instagram.com/saam_rst/">
+            <div class=instagram>
+                <div class="instagram_circle"></div>
+                <div class="instagram_image"></div>
             </div>
-        </div>
-        <div class=e6_66>
-            <div class="e6_67"></div><a href='index.html' class="e6_68">About Me</a>
-        </div>
-        <div class=e6_69>
-            <div class=e6_70>
-                <div class="e6_71"></div><span class="e6_72">Projects</span>
+        </a>
+
+        <a href="https://www.linkedin.com/in/samuel-ressiot-71806a261/">
+            <div class=linkedin>
+                <div class="linkedin_circle"></div>
+                <div class="linkedin_image"></div>
             </div>
-        </div>
-        <div class=e6_73>
-            <div class=e6_74>
-                <div class="e6_75"></div><span class="e6_76">Contact</span>
+        </a>
+
+        <a href="https://github.com/Sam-rst">
+            <div class=github>
+                <div class="github_circle"></div>
+                <div class="github_image"></div>
             </div>
-        </div>
-        <div class=e6_96>
-            <div class="e6_97"></div>
-            <div class="e6_92"></div>
-        </div>
-        <div class=e6_103>
-            <div class="e6_101"></div>
-            <div class="e6_99"></div>
-        </div>
-        <div class=e6_104>
-            <div class="e6_105"></div>
-            <div class="e6_107"></div>
+        </a>
+        
+        <div class=header>
+            <div class=about_me>
+                <div class="about_me_polygon"></div><a class="about_me_text">About Me</a>
+            </div>
+            <div class=projects>
+                <div class="projects_polygon"></div><a class="projetcts_text">Projects</a>
+            </div>
+            <div class=contact>
+                <div class="contact_polygon"></div><a class="contact_text">Contact</a>
+            </div>
+            <div class=home_page>
+                <div class="home_page_polygon"></div><a class="home_page_text" href="index.html">Home page</a>
+            </div>
         </div>
     </div>
 </body>
