--- a/index.html
+++ b/index.html
@@ -7,79 +7,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samuel Ressiot-Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Space+Grotesk&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="assets/style.css">
 </head>
-<header>
-    <div class=e5_2>
-        <div class="e2_26"></div> <a class="e2_29">About Me</a>
-    </div>
-    <div class=e5_6>
-        <div class=e5_3>
-            <div class="e5_4"></div> <a class="e5_5">Projects</a>
-        </div>
-    </div>
-    <div class=e5_7>
-        <div class=e5_8>
-            <div class="e5_9"> </div><a href='contacts.html' class="e5_10">Contact</a>
-        </div>
-    </div>
-</header>
 
 <body>
-    <div class="python_round">
-        <div class="python_circle"></div>
-        <div class="python_logo"></div>
-    </div>
 
-    <div class="css_round">
-        <div class="css_circle"></div>
-        <div class="css_logo"></div>
-    </div>
-
-    <div class="php_round">
-        <div class=php_circle></div>
-        <div class="php_logo"></div>
-    </div>
-
-    <div class="html_round">
-        <div class="html_circle"></div>
-        <div class="html_logo"></div>
-    </div>
-
-    <div class="sql_round">
-        <div class="sql_circle"></div>
-        <div class="sql_logo"></div>
-    </div>
-
-    <div class="linux_round">
-        <div class="linux_circle"></div>
-        <div class="linux_logo"></div>
-    </div>
-
-    <div class="git_round">
-        <div class="git_circle"></div>
-        <div class="git_logo"></div>
-    </div>
-
-    <div class="center_round">
-        <div class="center_circle"></div>
-        <div class="text">
-            <span class="line1">Hello, I am </span>
-            <span class="line2">Samuel RESSIOT</span></div>
-        <div class=e2_32>
-            <div class=e1_22>
-                <div class=e1_21>
-                    <div class="link_CV e1_6"></div><a href="assets/pdf/CV Ressiot Samuel companies.pdf" download
-                        class="link_CV e1_19">Download CV</a>
-                </div>
-            </div><span class="e1_18">Formation of DevOps and Backend</span>
+    <div class=portfolio___landing_page__desktop_>
+        <div class=short_presentation>
+            <div class="short_presentation_circle"></div>
+            <div class=download_cv>
+                <div class="download_cd_rect"></div><a class="download_cv_text"
+                    href="assets/pdf/CV Ressiot Samuel companies.pdf">Download CV</a>
+            </div><a class="line_3">Formation of DevOps and Backend</a><a class="line_2">Samuel
+                RESSIOT</a><a class="line_1">Hello, I am </a>
         </div>
-    </div>
-
-
-
-
+        <div class=sql>
+            <div class="sql_circle"></div>
+            <div class="sql_image"></div>
+        </div>
+        <div class=linux>
+            <div class="linux_circle"></div>
+            <div class="linux_image"></div>
+        </div>
+        <div class=git>
+            <div class="git_circle"></div>
+            <div class="git_image"></div>
+        </div>
+        <div class=python>
+            <div class="python_circle"></div>
+            <div class="python_image"></div>
+        </div>
+        <div class=css>
+            <div class="css_circle"></div>
+            <div class="css_image"></div>
+        </div>
+        <div class=php>
+            <div class="php_circle"></div>
+            <div class="php_image"></div>
+        </div>
+        <div class=html>
+            <div class="html_circle"></div>
+            <div class="html_image"></div>
+        </div>
+        <div class=header>
+            <div class=about_me>
+                <div class="about_me_polygon"></div><a class="about_me_text">About Me</a>
+            </div>
+            <div class=projects>
+                <div class="projects_polygon"></div><a class="projetcts_text">Projects</a>
+            </div>
+            <div class=contact>
+                <div class="contact_polygon"></div><a class="contact_text" href="contacts.html">Contact</a>
+            </div>
+        </div>
     </div>
 </body>
 
