--- a/index.html
+++ b/index.html
@@ -5,62 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Samuel Ressiot-Portfolio</title>
+
+    <title>PortFolio - Samuel RESSIOT</title>
+
     <link href="https://fonts.googleapis.com/css?family=Space+Grotesk&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
+
 </head>
 
 <body>
+    <nav class="navbar">
+        <a href="#" class="logo">PortFolio</a>
+        <div class="nav-links ">
+            <ul>
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">About me</a></li>
+                <li><a href="#">My projects</a></li>
+                <li><a href="#">Contact me</a></li>
+            </ul>
+        </div>
+        <img src="assets/img/menu-btn.png" alt="Menu hamburger" class="menu-hamburger">
 
-    <div class=portfolio___landing_page__desktop_>
-        <div class=short_presentation>
-            <div class="short_presentation_circle"></div>
-            <div class=download_cv>
-                <div class="download_cd_rect"></div><a class="download_cv_text"
-                    href="assets/pdf/CV Ressiot Samuel companies.pdf">Download CV</a>
-            </div><a class="line_3">Formation of DevOps and Backend</a><a class="line_2">Samuel
-                RESSIOT</a><a class="line_1">Hello, I am </a>
-        </div>
-        <div class=sql>
-            <div class="sql_circle"></div>
-            <div class="sql_image"></div>
-        </div>
-        <div class=linux>
-            <div class="linux_circle"></div>
-            <div class="linux_image"></div>
-        </div>
-        <div class=git>
-            <div class="git_circle"></div>
-            <div class="git_image"></div>
-        </div>
-        <div class=python>
-            <div class="python_circle"></div>
-            <div class="python_image"></div>
-        </div>
-        <div class=css>
-            <div class="css_circle"></div>
-            <div class="css_image"></div>
-        </div>
-        <div class=php>
-            <div class="php_circle"></div>
-            <div class="php_image"></div>
-        </div>
-        <div class=html>
-            <div class="html_circle"></div>
-            <div class="html_image"></div>
-        </div>
-        <div class=header>
-            <div class=about_me>
-                <div class="about_me_polygon"></div><a class="about_me_text">About Me</a>
-            </div>
-            <div class=projects>
-                <div class="projects_polygon"></div><a class="projetcts_text">Projects</a>
-            </div>
-            <div class=contact>
-                <div class="contact_polygon"></div><a class="contact_text" href="contacts.html">Contact</a>
-            </div>
-        </div>
-    </div>
+    </nav>
+    <header>
+    </header>
+
 </body>
+<script>
+    const menuHamburger = document.querySelector(".menu-hamburger")
+    const navLinks = document.querySelector(".nav-links")
+
+    menuHamburger.addEventListener('click', ()=>{
+        navLinks.classList.toggle('mobile-menu')
+    })
+</script>
 
 </html>
