Reconstruction complète de mon Portfolio

--- a/portfolio1.html
+++ b/portfolio1.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samuel Ressiot-Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Space+Grotesk&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/style_test.css">
+    <link rel="stylesheet" href="css/portfolio1.css">
 </head>
 
 <body>
