--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header">
         <a href="#" class="logo">Portfolio</a>
 
-        <i class='bx bx-menu' id="menu-icon"></i>
+        <a><i class='bx bx-menu' id="menu-icon"></i></a>
 
         <nav class="navbar">
             <a href="#home">Home</a>
@@ -35,7 +35,7 @@
         <div class="home-content">
             <h3>Hello, my name is</h3>
             <h1>Samuel RESSIOT</h1>
-            <h3>And I'm a <span>Video Games Developper</span></h3>
+            <h3>And I'm a <span id="multiple-text"></span></h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus nihil inventore sapiente dolor nobis
                 dolores. Suscipit, tempore.</p>
             <div class="social-media">
@@ -91,9 +91,105 @@
         </div>
     </section>
 
+    <!-- Portfolio section design -->
+    <section class="portfolio" id="portfolio">
+        <h2 class="heading">My <span>Projects</span></h2>
 
+        <div class="portfolio-container">
+            <div class="portfolio-box">
+                <img src="assets/img/marketplace-TQIH.png" alt="">
+                <div class="portfolio-layer">
+                    <h4><span>Python</span> Project</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, eaque?</p>
+                    <a href="#"><i class='bx bx-link-external'></i></i></a>
+                </div>
+            </div>
 
+            <div class="portfolio-box">
+                <img src="assets/img/dungeon1-TQIH.png" alt="">
+                <div class="portfolio-layer">
+                    <h4><span>Python</span> Project</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, eaque?</p>
+                    <a href="#"><i class='bx bx-link-external'></i></i></a>
+                </div>
+            </div>
 
+            <div class="portfolio-box">
+                <img src="assets/img/marketplace-TQIH.png" alt="">
+                <div class="portfolio-layer">
+                    <h4><span>Python</span> Project</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, eaque?</p>
+                    <a href="#"><i class='bx bx-link-external'></i></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="assets/img/dungeon1-TQIH.png" alt="">
+                <div class="portfolio-layer">
+                    <h4><span>Python</span> Project</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, eaque?</p>
+                    <a href="#"><i class='bx bx-link-external'></i></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="assets/img/marketplace-TQIH.png" alt="">
+                <div class="portfolio-layer">
+                    <h4><span>Python</span> Project</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, eaque?</p>
+                    <a href="#"><i class='bx bx-link-external'></i></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="assets/img/dungeon1-TQIH.png" alt="">
+                <div class="portfolio-layer">
+                    <h4><span>Python</span> Project</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, eaque?</p>
+                    <a href="#"><i class='bx bx-link-external'></i></i></a>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- Contact section design -->
+    <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me</span> !</h2>
+
+        <form action="contact.php" method="post">
+            <div class="input-box">
+                <input type="text" name="name" id="name" required placeholder="Full Name">
+                <input type="email" name="email" id="email" required placeholder="Email Address">
+            </div>
+
+            <div class="input-box">
+                <input type="number" name="phone" id="phone" required placeholder="Mobile Number">
+                <input type="text" name="title" id="title" required placeholder="Email Title">
+            </div>
+            <textarea name="message" id="message" cols="30" rows="10" required placeholder="Your Message"></textarea>
+            <input type="submit" value="Send Message" class="btn">
+        </form>
+    </section>
+
+    <!-- Footer design -->
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy; 2023 by Samort | All Rights Reserved.</p>
+        </div>
+
+        <div class="footer-iconTop">
+            <a href="#home"><i class='bx bxs-up-arrow-circle' ></i></a>
+        </div>
+    </footer>
+
+    <!-- Scroll reveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- Typed JS -->
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
+    <!-- Script of the landing page -->
     <script src="js/script.js"></script>
 </body>
 
