--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <!-- Footer design -->
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2023 by Samort | All Rights Reserved.</p>
+            <!-- <p>Copyright &copy; 2023 by Samort | All Rights Reserved.</p> -->
         </div>
 
         <div class="footer-iconTop">
