--- a/index.html
+++ b/index.html
@@ -36,36 +36,44 @@
             <h3>Hello, my name is</h3>
             <h1>Samuel RESSIOT</h1>
             <h3>And I'm a <span id="multiple-text"></span></h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus nihil inventore sapiente dolor nobis
-                dolores. Suscipit, tempore.</p>
+            <p>I have been passionate about the world of <span>computers</span> and <span>video games</span> since I was
+                little, that's why I
+                would like to become a <span>developer of independent video games</span>. I am delighted to present my
+                <span>portfolio</span>.
+            </p>
             <div class="social-media">
-                <a href="#"><i class='bx bxl-github'></i></a>
+                <a href="https://github.com/Sam-rst"><i class='bx bxl-github'></i></a>
                 <a href="#"><i class='bx bxl-instagram'></i></a>
-                <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+                <a href="https://www.linkedin.com/in/samuel-ressiot-71806a261/"><i class='bx bxl-linkedin-square'></i></a>
             </div>
             <a href="assets/pdf/CV Ressiot Samuel companies.pdf" class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
             <img src="assets/img/avatar-Samuel.png" alt="Avatar Samuel">
-
         </div>
+        
     </section>
 
     <!-- About section design -->
     <section class="about" id="about">
-        <div class="about-img">
-            <img src="assets/img/avatar-Samuel.png" alt="Avatar Samuel">
-        </div>
+        <h2 class="heading">About <span>Me</span></h2>
 
-        <div class="about-content">
-            <h2 class="heading">About <span>Me</span></h2>
-            <h3>Frontend Developer</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non fuga aliquam ipsum perferendis pariatur,
-                ipsa aperiam, asperiores assumenda sit quae in dolore ullam possimus officia dolores iusto repudiandae
-                veniam repellendus eveniet. Vero odit repudiandae sed, quas labore assumenda mollitia, adipisci
-                recusandae facere, in et deleniti repellat?</p>
-            <a href="#" class="btn">Read More</a>
+        <div class="about-container">
+            <div class="about-img">
+                <img src="assets/img/avatar-Samuel.png" alt="Avatar Samuel">
+            </div>
+
+            <div class="about-content">
+                <h3>Video Game Developer</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non fuga aliquam ipsum perferendis
+                    pariatur,
+                    ipsa aperiam, asperiores assumenda sit quae in dolore ullam possimus officia dolores iusto
+                    repudiandae
+                    veniam repellendus eveniet. Vero odit repudiandae sed, quas labore assumenda mollitia, adipisci
+                    recusandae facere, in et deleniti repellat?</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
         </div>
     </section>
 
@@ -179,7 +187,7 @@
         </div>
 
         <div class="footer-iconTop">
-            <a href="#home"><i class='bx bxs-up-arrow-circle' ></i></a>
+            <a href="#home"><i class='bx bxs-up-arrow-circle'></i></a>
         </div>
     </footer>
 
