V1 of my Portfolio

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
@@ -27,6 +27,7 @@
             <a href="#services">Services</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
+            <a href="src/php/CRUD">Crud</a>
         </nav>
     </header>
 
@@ -165,7 +166,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me</span> !</h2>
 
-        <form action="contact.php" method="post">
+        <form action="src/php/contact.php" method="post">
             <div class="input-box">
                 <input type="text" name="name" id="name" required placeholder="Full Name">
                 <input type="email" name="email" id="email" required placeholder="Email Address">
@@ -198,7 +199,7 @@
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
     <!-- Script of the landing page -->
-    <script src="js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
